miniextendr-macros/tests/ui/derive_dataframe_enum_nested_enum_as_factor_invalid_type.rs
//! Test: as_factor on Vec<i32> → compile error.

use miniextendr_macros::DataFrameRow;

#[derive(DataFrameRow)]
#[dataframe(tag = "_type")]
enum Outer {
    Ev {
        #[dataframe(as_factor)]
        vals: Vec<i32>,
    },
    Other,
}

fn main() {}
